labs/ingress/specs/ckad/path-routing/multi-path.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: multi-path
  labels:
    kubernetes.courselabs.co: ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-service
  namespace: multi-path
  labels:
    kubernetes.courselabs.co: ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
        kubernetes.courselabs.co: ingress
    spec:
      containers:
      - name: whoami
        image: sixeyed/whoami:21.04
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-service
  namespace: multi-path
  labels:
    kubernetes.courselabs.co: ingress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
        kubernetes.courselabs.co: ingress
    spec:
      containers:
      - name: whoami
        image: sixeyed/whoami:21.04
        ports:
        - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-service
  namespace: multi-path
  labels:
    kubernetes.courselabs.co: ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
        kubernetes.courselabs.co: ingress
    spec:
      containers:
      - name: whoami
        image: sixeyed/whoami:21.04
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: multi-path
  labels:
    kubernetes.courselabs.co: ingress
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 8080
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: multi-path
  labels:
    kubernetes.courselabs.co: ingress
spec:
  selector:
    app: web
  ports:
  - name: http
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: admin-svc
  namespace: multi-path
  labels:
    kubernetes.courselabs.co: ingress
spec:
  selector:
    app: admin
  ports:
  - name: http
    port: 3000
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-path-ingress
  namespace: multi-path
  labels:
    kubernetes.courselabs.co: ingress
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-svc
            port:
              number: 8080
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin-svc
            port:
              number: 3000
